syntax = "proto3";
package game.auth;

import "common/common.proto";
option java_package = "com.zunf.tankbattletcpserver.game.auth";
option java_outer_classname = "AuthProto";

message LoginRequest {
  string token = 1;
}

message LoginResponse {
  int64 player_id = 3; // 成功时返回
}
